# AI394D-deep-learning

./: .gitignore  README.md  pyproject.toml
deeplearning/homework_01/: __init__.py
deeplearning/homework_01/homework/: nearest_neighbor_classifier.py  pytorch_basics.py  weather_forecast.py
deeplearning/homework_02/homework/: linear.th  logger.py  models.py  train.py
deeplearning/homework_02/logs/linear_0222_095329/: events.out.tfevents.1740236009.Tims-MacBook-Pro.local.68348.0
deeplearning/homework_02/logs/liner_0222_095325/: events.out.tfevents.1740236005.Tims-MacBook-Pro.local.68308.0
deeplearning/homework_02/logs/mlp_0222_102847/: events.out.tfevents.1740238127.Tims-MacBook-Pro.local.81023.0
deeplearning/homework_03/: requirements.txt
deeplearning/homework_03/grader/: tests.py
deeplearning/homework_03/homework/: detector.th  models.py  train_classification.py  train_detector.py
deeplearning/homework_04/: 1b_prd.md  1b_todo.md
deeplearning/homework_04/homework/: cnn_planner.th  metrics.py  mlp_planner.th  models.py  train_cnn.py  train_planner.py  train_transformer.py  transformer_planner.th
deeplearning/lecture/: lecture_2_1.ipynb  lecture_2_4.ipynb  lecture_6_3.ipynb  lecture_6_7.ipynb
deeplearning/pytorch_tutorial/: quickstart.ipynb
deeplearning/scratch/: hw_01.ipynb  hw_01_basics.ipynb  hw_01_nnc.ipynb  hw_01_weather.ipynb  hw_03_data.ipynb  hw_03_scratch.ipynb  scrach.ipynb
lecture/: lecture_1_3.ipynb  lecture_1_4.ipynb  lecture_1_7.ipynb
pytorch_tutorial/: README.md  quickstart.ipynb
(+5 files in other folders)
