[project]
name = "deeplearning"
version = "0.1.0"
description = "UT Austin AI394D Deep Learning class work"
authors = [
    {name = "Tim Reddick",email = "r.t.reddick@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "termcolor (>=2.5.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
