[project]
name = "deeplearning"
version = "0.1.0"
description = "UT Austin AI394D Deep Learning class work"
authors = [
    {name = "Tim Reddick",email = "r.t.reddick@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "Pillow (>=10.0.0,<11.0.0)",
    "opencv-python (>=4.10.0,<5.0.0)",
    "tqdm (>=4.65.0,<5.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "imageio (>=2.37.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
